added advantages section

--- a/app/index.html
+++ b/app/index.html
@@ -94,7 +94,7 @@
 		<div class="advantages-header-wrapper">
 		<h2 class="advantages-header advantages-header-plus">Что даёт наш спец-курс</h2>
 		</div>
-			<ul>
+			<ul class="advantages__plus-wrapper">
 				<li class="advantages-item ">
 					<h3 class="advantages__plus-header plus-header_1">Базовые знания</h3>
 					<p class="advantages-text">
@@ -109,21 +109,21 @@
 	</div>
 	<div class="advantages__minus">
 		<h2 class="advantages-header advantages-header-minus">Чего <br>не будет</h2>
-		
-		<ul>
+		<div >	
+		<ul class="advantages__minus-wrapper">
 			<li class="advantages-item">
 				<h3 class="advantages__minus-header minus-header_1">Нет скуке!</h3>
 				<p class="advantages-text">
 					Не будет скучной и нудной теории.Курс состоит на 80% из практики и только на 20% из теории.
 				</p>
 			</li>
-		</ul>
-		<ul>
+		
 			<li class="advantages-item">
 				<h3 class="advantages__minus-header minus-header_2">И вакханалиям</h3><p class="advantages-text">
 				Никаких песен у костра и алкопоходов. Только хардкор!</p>
 			</li>
 		</ul>
+		
 	</div>
 </section>
 
