Added expirience block

--- a/app/index.html
+++ b/app/index.html
@@ -130,39 +130,39 @@
 
 <section class="expirience">
 	<div class="expirience__forest">
-		<h2>Ты узнаешь,что делать</h2>
-			<ul>
-				<li>
-					<h4>Если ты заблудился</h4>
+		<h2 class="expirience-header">Ты узнаешь, что делать</h2>
+			<ul class="expirience__list-forest">
+				<li class="expirience__item-forest">
+					<h4 class="expirience__item-header">Если ты заблудился</h4>
 					Как быть, если заблудился и остался один в лесу, как не умереть от голода и холода, сделать себе ночлег, развести огонь без спичек.
 				</li>
-				<li>
-					<h4>Если встретил диких зверей</h4>
+				<li class="expirience__item-forest">
+					<h4 class="expirience__item-header">Если встретил диких зверей</h4>
 					Как вести себя в экстремальной ситуации при встрече с лесными животными, даже если «вон та киса» выглядит такой мирной.
 				</li>
-				<li>
-					<h4>Если нужна первая помощь</h4>
+				<li class="expirience__item-forest">
+					<h4 class="expirience__item-header">Если нужна первая помощь</h4>
 					Ты узнаешь, что делать, если человеку стало плохо, как оказать самопомощь, как вынести пострадавшего из зоны поражения.
 				</li>
-				<li>
-					<h4>Если оказался в воде</h4>
+				<li class="expirience__item-forest">
+					<h4 class="expirience__item-header">Если оказался в воде</h4>
 					Как спасти утопающего. Как не замёрзнуть и просушить одежду. Как подать сигнал SOS.
 				</li>
-				<li>
-					<h4>Если грозит опасность</h4>
+				<li class="expirience__item-forest">
+					<h4 class="expirience__item-header">Если грозит опасность</h4>
 					Узнаешь рабочие алгоритмы действий в различных экстренных ситуациях
 				</li>
 			</ul>
 		
 </div>
 	<div class="expirience__city">
-		<h3>также курс включает в себя блок по безопасности в городе</h3>
-		<ul>
-			<li>Как действовать во время пожара</li>
-			<li>Блок по автомобильной безопасности</li>
-			<li>Народные волнения, давки, теракты</li>
-			<li>Техногенные и природные катастрофы</li>
-			<li>Что должно быть в EDC наборе</li>
+		<h3 class="expirience__city-header">также курс включает в себя блок по безопасности в городе</h3>
+		<ul class="expirience__list-city">
+			<li class="expirience__item-city">Как действовать во время пожара</li>
+			<li class="expirience__item-city">Блок по автомобильной безопасности</li>
+			<li class="expirience__item-city">Народные волнения, давки, теракты</li>
+			<li class="expirience__item-city">Техногенные и природные катастрофы</li>
+			<li class="expirience__item-city">Что должно быть в EDC наборе</li>
 		</ul>
 	</div>
 </section>
