Added try block

--- a/app/index.html
+++ b/app/index.html
@@ -168,8 +168,9 @@
 </section>
 
 <section class="try">
-	<h2 class="try__header"><span class="try__header-mode">Испытай</span>себя на прочность</h2>
-	<button class="risk">рискнуть</button><
+
+	<h2  class="try__header"><span class="try__header_mode">Испытай <br></span> <span  class="try__header_no-mode">себя на прочность</span></h2>
+	<button class="risk-button">рискнуть</button>
 </section>
 
 <section class="skills">
