--- a/app/index.html
+++ b/app/index.html
@@ -170,35 +170,47 @@
 <section class="try">
 
 	<h2  class="try__header"><span class="try__header_mode">Испытай <br></span> <span  class="try__header_no-mode">себя на прочность</span></h2>
-	<button class="risk-button">рискнуть</button>
+	<button class="risk-button try-button">рискнуть</button>
 </section>
 
 <section class="skills">
-	<h2 class="skills__header">Ты приобретешь навык</h2>
-	<ul>
-		<li>Освоишь больше десятка узлов</li>
-		<li>Побываешь в роли пострадавшего и спасателя</li>
-		<li>Проведешь ночь в партизанском укрытии</li>
-		<li>Попробушь себя в роли Леонардо ДиКаприо в фильме "Выживший"</li>
-		<li>Получшь море адреналина, но самое главное - бесценный опыт, который останется с тобой на всю жизнь</li>
+	<h2 class="skills-header">Ты приобретешь навык</h2>
+	<div class="svg-text">
+	<svg class="skills-svg" width="400" height="250">
+    <defs>
+		<path id="path" d="M0,50 Q120,30 300,150"/>
+    </defs>
+    <text textLength="260" x="0" y="0" style="stroke: #cccccc;">
+      <textPath xlink:href="#path" >
+             и многое другое
+      </textPath>
+    </text>
+</svg>
+</div>
+	<ul class="skills__list">
+		<li class="skills__list-item item-first">Освоишь больше десятка узлов</li>
+		<li class="skills__list-item item-second">Побываешь в роли пострадавшего и спасателя</li>
+		<li class="skills__list-item item-third">Проведешь ночь в партизанском укрытии</li>
+		<li class="skills__list-item item-fourth">Попробушь себя в роли Леонардо ДиКаприо в фильме "Выживший"</li>
+		<li class="skills__list-item item-fifth">Получшь море адреналина, но самое главное - бесценный опыт, который останется с тобой на всю жизнь</li>
 	</ul>
 </section>
 
 <section class="programm">
-	<h2 class="programm__header">В программе спецкурса</h2>
-	<ul>
-		<li>Военный альпинизм с минимальным набором снаряжения</li>
-		<li>Тактическая медицина</li>
-		<li>Разведения огня без спичек</li>
-		<li>Построение укрытий, долговременных и краткосрочных</li>
-		<li>Блок по экипировке</li>
-		<li>Аварийно-спасательные работы</li>
-		<li>Первая помощь</li>
-		<li>Методы согрева и просушки одежды</li>
-		<li>Поисково-спастельные работы</li>
+	<h2 class="programm-header">В программе спецкурса</h2>
+	<ul class="programm__list">
+		<li class="programm__list-item">Военный альпинизм с минимальным набором снаряжения</li>
+		<li class="programm__list-item">Тактическая медицина</li>
+		<li class="programm__list-item">Разведения огня без спичек</li>
+		<li class="programm__list-item">Построение укрытий, долговременных и краткосрочных</li>
+		<li class="programm__list-item">Блок по экипировке</li>
+		<li class="programm__list-item">Аварийно-спасательные работы</li>
+		<li class="programm__list-item">Первая помощь</li>
+		<li class="programm__list-item">Методы согрева и просушки одежды</li>
+		<li class="programm__list-item">Поисково-спастельные работы</li>
 	</ul>
-  <h3>записаться и</h3>
-  <button class="risk">Рискнуть</button>
+  <p class="programm-text">записаться и</p>
+  <button class="risk-button programm-button">Рискнуть</button>
 </section>
 
 <section class="fotos">
@@ -239,4 +251,5 @@
 		<p class="item__text">Я, Выжил!!!! Такого треша в жизни у меня не было. Не думал даже, что на такое способен в последнее время. Ни какое КМБ и прочее с этим не сравнится. Каждый день плавать в одежде в речках (а это Мурманск детка), спать по 2 часа или совсем не спать, потому что надо совершать марш броски с пострадавшим в 140 кг. ,освоить альпинизм и совершать самостоятельные спуски и подъемы с крутых скал за 1 день, делать носилки за 5 минут из подручных средств, есть ягоды по пол дня, потому что другой еды нет, пить только из речки, ходить босиком по лесу весь день, делать укрытия, о которых даже в детстве не мечтал, спать под открытым небом без спальников... и палаток, и </p>
 	</div>
 </section>
+
 </body>
