add programm block

--- a/app/index.html
+++ b/app/index.html
@@ -209,8 +209,10 @@
 		<li class="programm__list-item">Методы согрева и просушки одежды</li>
 		<li class="programm__list-item">Поисково-спастельные работы</li>
 	</ul>
+	<div class="programm__wrapper">
   <p class="programm-text">записаться и</p>
   <button class="risk-button programm-button">Рискнуть</button>
+</div>
 </section>
 
 <section class="fotos">
