add fotos block

--- a/app/index.html
+++ b/app/index.html
@@ -216,7 +216,11 @@
 </section>
 
 <section class="fotos">
-	
+	<picture >
+		<source media="(max-width: 320px)" srcset="images/ProgrammFotoMob.jpg">
+		<source media="(max-width: 750px)" srcset="images/ProgrammFotoTab.jpg">
+		<img class="programm-foto" src="images//ProgrammFotoDesk.jpg" alt="Фотографии людей в походе">
+	  </picture>
 </section>
 <section class="instructor">
 	<h2 class="instructor__header">Инструктор</h2>
