Add html for map block

--- a/app/index.html
+++ b/app/index.html
@@ -314,5 +314,17 @@
 </div>
 </div>
 </section>
+<section class="map">
+	<h2 class="map-header">георгафия проведения</h2>
+	<ul>
+		<li class="map-city city-first"><span class="visually-hidden">First</span></li>
+		<li class="map-city city-second"><span class="visually-hidden">Second</span></li>
+		<li class="map-city city-third"><span class="visually-hidden">Third</span></li>
+		<li class="map-city city-fourth"><span class="visually-hidden">Fourth</span></li>
+		<li class="map-city city-fifs"><span class="visually-hidden">Fifs</span></li>
+		<li class="map-city city-six"><span class="visually-hidden">Six</span></li>
+		<li class="map-city city-seven"><span class="visually-hidden">Seven</span></li>
+	</ul>
+</section>
 <script src="js/common.js"></script>
 </body>
