--- a/app/index.html
+++ b/app/index.html
@@ -285,8 +285,9 @@
 	<div class="testimonials__item">
 		<div class="testimonials__item-wrapper">
 			<picture >
-					<source media="(max-width: 320px)" srcset="images/TestimonialsFotoMob.jpg">
-					<source media="(max-width: 749px)" srcset="images/TestimonialsFotoTab.jpg">
+					
+					
+						<source media="(max-width: 1170px)" srcset="images/TestimonialsFotoTab.jpg">
 					<img class="testimonials-foto" src="images/TestimonialsFoto.jpg" alt="Молодой человек в солнечных очках.">
 				  </picture>
 				  <div class="testimonials-wrapper">
@@ -316,15 +317,22 @@
 </section>
 <section class="map">
 	<h2 class="map-header">георгафия проведения</h2>
+	<div class="map-wrapper">
 	<ul>
+			<picture >
+					<source media="(max-width: 749px)" srcset="images/MapMob.png">
+					<source media="(max-width: 1169px)" srcset="images/MapTab.png">
+					<img class="map-foto" src="images/MapDesk.png" alt="Карта проведения мероприятий.">
+				  </picture>
 		<li class="map-city city-first"><span class="visually-hidden">First</span></li>
 		<li class="map-city city-second"><span class="visually-hidden">Second</span></li>
 		<li class="map-city city-third"><span class="visually-hidden">Third</span></li>
 		<li class="map-city city-fourth"><span class="visually-hidden">Fourth</span></li>
-		<li class="map-city city-fifs"><span class="visually-hidden">Fifs</span></li>
+		<li class="map-city city-fifth"><span class="visually-hidden">Fith</span></li>
 		<li class="map-city city-six"><span class="visually-hidden">Six</span></li>
 		<li class="map-city city-seven"><span class="visually-hidden">Seven</span></li>
 	</ul>
+</div>
 </section>
 <script src="js/common.js"></script>
 </body>
