--- a/app/index.html
+++ b/app/index.html
@@ -353,5 +353,13 @@
 			
 			</form> 
 </section>
+<footer class="footer">
+	
+<a class="footer-tel" href="tel:79304150252">+7(930) 415 02 52</a>
+		<h2 class="footer-header"><a class="footer-privacy" href="#">Политика конфеденциальности</a></h2>
+		<img class="intro-logo" src="images/logoFooter.png" alt="Логотип.Морда льва.">
+		<p class="footer-copyyear">&copy;2017</p>
+</picture>
+</footer>
 <script src="js/common.js"></script>
 </body>
