add all styles for footer

--- a/app/index.html
+++ b/app/index.html
@@ -357,8 +357,10 @@
 	
 <a class="footer-tel" href="tel:79304150252">+7(930) 415 02 52</a>
 		<h2 class="footer-header"><a class="footer-privacy" href="#">Политика конфеденциальности</a></h2>
-		<img class="intro-logo" src="images/logoFooter.png" alt="Логотип.Морда льва.">
+		<div class="footer-logo__wrapper">
+		<img class="footer-logo" src="images/logoFooter.png" alt="Логотип.Морда льва.">
 		<p class="footer-copyyear">&copy;2017</p>
+	</div>
 </picture>
 </footer>
 <script src="js/common.js"></script>
