add js for opening/closing popup on click

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,7 @@
        	<span class="intro__schedule-days">3 дня с утра до вечера</span>
        </p>
 
-    <button class="intro__risk risk-button">Рискнуть</button>
+    <button class="intro__risk risk-button popupBtn">Рискнуть</button>
        </div>
     </section> 
 
@@ -170,7 +170,7 @@
 <section class="try">
 
 	<h2  class="try__header"><span class="try__header_mode">Испытай <br></span> <span  class="try__header_no-mode">себя на прочность</span></h2>
-	<button class="risk-button try-button">рискнуть</button>
+	<button class="risk-button try-button popupBtn">рискнуть</button>
 </section>
 
 <section class="skills">
@@ -211,7 +211,7 @@
 	</ul>
 	<div class="programm__wrapper">
   <p class="programm-text">записаться и</p>
-  <button class="risk-button programm-button">Рискнуть</button>
+  <button class="risk-button programm-button popupBtn">Рискнуть</button>
 </div>
 </section>
 
@@ -254,7 +254,7 @@
 <section class="try">
 
 		<h2  class="try__header"><span class="try__header_mode">Испытай <br></span> <span  class="try__header_no-mode">себя на прочность</span></h2>
-		<button class="risk-button try-button">рискнуть</button>
+		<button class="risk-button try-button popupBtn">рискнуть</button>
 	</section>
 
 <section class="testimonials">
@@ -365,7 +365,7 @@
 
 </footer>
 
-<div class=" popup">
+<div class=" popup closed">
 	<button class="popup-close">Закрыть</button>
 
 	<h2 class="popup-header">Попробуй выжить</h2>
@@ -386,7 +386,7 @@
 			</form> 
 		
 		</div>
-	<div class="popup-overlay"></div>
+	<div class="popup-overlay closed"></div>
 
 <script src="js/common.js"></script>
 </body>
